# Homework_Cpp_VK

./: .gitignore  CMakeLists.txt  README.md  file_1.txt  file_2.txt  main.cpp  pull_request.yml
.github/workflow/: pull_request.yml
.github/workflows/: pull_request.yml
headers/: CatOperation.h  CatOperation.hpp  Conveyer.h  Conveyor.h  Conveyor.hpp  EchoOperation.h  EchoOperation.hpp  ErrorProcessing.h  IOperation.h  IOperation.hpp  ParsedInformationProcessing.h  Parser.h  Parser.hpp  UniqOperation.h  UniqOperation.hpp
src/: CatOperation.cpp  Conveyer.cpp  Conveyor.cpp  EchoOperation.cpp  ErrorProcessing.cpp  IOperation.cpp  ParsedInformationProcessing.cpp  Parser.cpp  UniqOperation.cpp  main.cpp
test_files/: file_2.txt
